--- a/ClientApp/src/app/formula-lookup/customer-details/search-customer/search-customer.component.html
+++ b/ClientApp/src/app/formula-lookup/customer-details/search-customer/search-customer.component.html
@@ -37,7 +37,7 @@
       <p class="font-weight-bold">Make your selection by double clicking on your choice</p>
     </div>
     <div style="margin-left:1%;margin-top:1%; height:350px; overflow-y: auto;">
-      <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+      <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
         <thead>
           <tr>
             <th scope="col">Customer Key</th>
