--- a/ClientApp/src/app/raw-material/add-supplier/search-supplier/search-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/search-supplier/search-supplier.component.html
@@ -68,7 +68,7 @@
 </div>
 
 <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
-  <h5 style="float:left;margin-top:10px;color:maroon">Records:{{supplier_searchdatalength}} ( {{countyes}} Approved / {{countno}} Unapproved Suppliers)</h5>
+  <h5 style="float:left;margin-top:10px;color:maroon">Records:{{filterMetadata.count}}   (Total {{countyes}} Approved / {{countno}} Unapproved Suppliers)</h5>
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%" matDialogClose>Close</button>
 
 </div>
