--- a/ClientApp/src/app/raw-material/add-cas-details/search-cas/search-cas.component.html
+++ b/ClientApp/src/app/raw-material/add-cas-details/search-cas/search-cas.component.html
@@ -11,13 +11,13 @@
         <div class="form-group row">
           <label for="Supplier Key" class="col-sm-2 col-form-label">CAS No</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="inputSupplier key" placeholder="">
+            <input type="text" class="form-control" id="cano" placeholder="" [(ngModel)]="casno" name="casn" value="">
           </div>
         </div>
         <div class="form-group row">
           <label for="inputSupplier Name" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="Supplier Name" placeholder="">
+            <input type="text" class="form-control" id="casdec" placeholder="" [(ngModel)]="descrption" name="casdec" value="">
           </div>
         </div>
       </form>
@@ -42,7 +42,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let cas_detail of cassearchdata; let i=index;" (click)="setcasdetails(cas_detail);">
+        <tr *ngFor="let cas_detail of cassearchdata  | filter:casno:filterMetadata|filter:descrption:filterMetadata; let i=index;" (click)="setcasdetails(cas_detail);">
           <td>{{ cas_detail.CASNo}}</td>
           <td style="width:12%">{{ cas_detail.Description}}</td>
           <td style="width:12%">{{ cas_detail.EINECSNo}}</td>
@@ -60,7 +60,7 @@
 
   <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%" matDialogClose>Close</button>
 
-  <h5 style="float:left;margin-top:10px;color:maroon">{{cassearchLength}} Record(s)</h5>
+  <h5 style="float:left;margin-top:10px;color:maroon">{{filterMetadata.count}} Record(s)</h5>
 
 
 </div>
